[project]
name = "cronty-mcp"
version = "0.1.0"
description = "FastMCP server for cron job scheduling and notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp<3",
    "qstash>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
